[metadata]
name = ryvencore
version = v0.3.1.2
author = Leon Thomm
author_email = l.thomm@mailbox.org
description = Python backend for node editor-like graph-based processing
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/leon-thomm/ryvencore
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
# install_requires = (None)

# [options.entry_points]
# console_scripts = (None)
